更新 socks5-test.yaml

--- a/.github/workflows/socks5-test.yaml
+++ b/.github/workflows/socks5-test.yaml
@@ -1,6 +1,8 @@
-name: Test SOCKS5 Proxies - 1
+name: Test SOCKS5 Proxies
 
 on:
+  schedule:
+    - cron: '0 */1 * * *'
   workflow_dispatch:
 
 jobs:
