--- a/.github/workflows/socks5-test.yaml
+++ b/.github/workflows/socks5-test.yaml
@@ -21,6 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install requests pysocks
+        pip install pythonping
 
     - name: Run proxy test
       env:
